# Xadrex2-refactored

./: CMakeLists.txt  historico.txt  partida.txt  randon.h  tabuleiro.txt
include/: Chessboard.h  Constants.h  MoveValid.h  Movements.h  Piece.h  Random.h  Settings.h  Sound.h  UI.h  Utils.h
src/: Chessboard.cpp  Movements.cpp  Random.cpp  Sound.cpp  UI.cpp  Xadrex_2.cpp
